// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`snapshot: basic usage css 1`] = `""`;

exports[`snapshot: basic usage html 1`] = `
<div
  className="fcFloatingAction-root"
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
>
  <div
    className="fcFloatingAction-item"
    onClick={[Function]}
  >
    <button
      aria-describedby={undefined}
      className="MuiButtonBase-root MuiButton-root MuiButton-raised MuiButton-fab MuiButton-raisedSecondary fcFloatingAction-button"
      disabled={false}
      onBlur={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseOver={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex="0"
      type="button"
    >
      <span
        className="MuiButton-label"
      >
        <svg
          aria-hidden="true"
          className="MuiSvgIcon-root fcFloatingAction-icon fcFloatingAction-plusIcon"
          color={undefined}
          focusable="false"
          viewBox="0 0 24 24"
        >
          <g>
            <path
              d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z"
            />
          </g>
        </svg>
        <svg
          aria-hidden="true"
          className="MuiSvgIcon-root fcFloatingAction-icon fcFloatingAction-opened"
          color={undefined}
          focusable="false"
          viewBox="0 0 24 24"
        >
          <g>
            <path
              d="M3 17.25V21h3.75L17.81 9.94l-3.75-3.75L3 17.25zM20.71 7.04c.39-.39.39-1.02 0-1.41l-2.34-2.34c-.39-.39-1.02-.39-1.41 0l-1.83 1.83 3.75 3.75 1.83-1.83z"
            />
          </g>
        </svg>
      </span>
      <span
        className="MuiTouchRipple-root"
      />
    </button>
    <div
      className="MuiTooltip-popper"
      data-placement={undefined}
      data-x-out-of-boundaries={undefined}
      style={
        Object {
          "left": 0,
          "opacity": 0,
          "pointerEvents": "none",
          "position": "absolute",
          "top": 0,
        }
      }
    >
      <div
        aria-hidden={true}
        className="MuiTooltip-tooltip MuiTooltip-tooltipPlacementLeft"
        id={undefined}
        role="tooltip"
      >
        Add
      </div>
    </div>
  </div>
</div>
`;

exports[`snapshot: className css 1`] = `
".MuiSvgIcon-root {
  fill: currentColor;
  width: 1em;
  height: 1em;
  display: inline-block;
  font-size: 24px;
  transition: fill 200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  user-select: none;
  flex-shrink: 0;
}
.MuiSvgIcon-colorPrimary {
  color: #3f51b5;
}
.MuiSvgIcon-colorSecondary {
  color: #f50057;
}
.MuiSvgIcon-colorAction {
  color: rgba(0, 0, 0, 0.54);
}
.MuiSvgIcon-colorDisabled {
  color: rgba(0, 0, 0, 0.26);
}
.MuiSvgIcon-colorError {
  color: #f44336;
}
.MuiTouchRipple-root {
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  display: block;
  z-index: 0;
  position: absolute;
  overflow: hidden;
  border-radius: inherit;
  pointer-events: none;
}
.MuiTouchRipple-ripple {
  top: 0;
  left: 0;
  width: 50px;
  height: 50px;
  opacity: 0;
  position: absolute;
}
.MuiTouchRipple-rippleVisible {
  opacity: 0.3;
  transform: scale(1);
  animation: mui-ripple-enter 550ms cubic-bezier(0.4, 0, 0.2, 1);
}
.MuiTouchRipple-ripplePulsate {
  animation-duration: 200ms;
}
.MuiTouchRipple-child {
  width: 100%;
  height: 100%;
  opacity: 1;
  display: block;
  border-radius: 50%;
  background-color: currentColor;
}
.MuiTouchRipple-childLeaving {
  opacity: 0;
  animation: mui-ripple-exit 550ms cubic-bezier(0.4, 0, 0.2, 1);
}
.MuiTouchRipple-childPulsate {
  top: 0;
  left: 0;
  position: absolute;
  animation: mui-ripple-pulsate 2500ms cubic-bezier(0.4, 0, 0.2, 1) 200ms infinite;
}
@keyframes mui-ripple-enter {
  0% {
    opacity: 0.1;
    transform: scale(0);
  }
  100% {
    opacity: 0.3;
    transform: scale(1);
  }
}
@keyframes mui-ripple-exit {
  0% {
    opacity: 1;
  }
  100% {
    opacity: 0;
  }
}
@keyframes mui-ripple-pulsate {
  0% {
    transform: scale(1);
  }
  50% {
    transform: scale(0.92);
  }
  100% {
    transform: scale(1);
  }
}
.MuiButtonBase-root {
  color: inherit;
  cursor: pointer;
  margin: 0;
  border: 0;
  display: inline-flex;
  padding: 0;
  outline: none;
  position: relative;
  user-select: none;
  align-items: center;
  border-radius: 0;
  vertical-align: middle;
  justify-content: center;
  -moz-appearance: none;
  text-decoration: none;
  background-color: transparent;
  -webkit-appearance: none;
  -webkit-tap-highlight-color: transparent;
}
.MuiButtonBase-root::-moz-focus-inner {
  border-style: none;
}
.MuiButtonBase-root.MuiButtonBase-disabled {
  cursor: default;
  pointer-events: none;
}
.MuiButton-root {
  color: rgba(0, 0, 0, 0.87);
  padding: 8px 16px;
  min-width: 88px;
  font-size: 0.875rem;
  box-sizing: border-box;
  min-height: 36px;
  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  line-height: 1.4em;
  font-family: \\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif;
  font-weight: 500;
  border-radius: 2px;
  text-transform: uppercase;
}
.MuiButton-root:hover {
  text-decoration: none;
  background-color: rgba(0, 0, 0, 0.08);
}
.MuiButton-root.MuiButton-disabled {
  color: rgba(0, 0, 0, 0.26);
}
@media (hover: none) {
  .MuiButton-root:hover {
    background-color: transparent;
  }
}
.MuiButton-root:hover.MuiButton-disabled {
  background-color: transparent;
}
.MuiButton-label {
  width: 100%;
  display: inherit;
  align-items: inherit;
  justify-content: inherit;
}
.MuiButton-flatPrimary {
  color: #3f51b5;
}
.MuiButton-flatPrimary:hover {
  background-color: rgba(63, 81, 181, 0.08);
}
@media (hover: none) {
  .MuiButton-flatPrimary:hover {
    background-color: transparent;
  }
}
.MuiButton-flatSecondary {
  color: #f50057;
}
.MuiButton-flatSecondary:hover {
  background-color: rgba(245, 0, 87, 0.08);
}
@media (hover: none) {
  .MuiButton-flatSecondary:hover {
    background-color: transparent;
  }
}
.MuiButton-colorInherit {
  color: inherit;
}
.MuiButton-raised {
  color: rgba(0, 0, 0, 0.87);
  box-shadow: 0px 1px 5px 0px rgba(0, 0, 0, 0.2),0px 2px 2px 0px rgba(0, 0, 0, 0.14),0px 3px 1px -2px rgba(0, 0, 0, 0.12);
  background-color: #e0e0e0;
}
.MuiButton-raised.MuiButton-focusVisible {
  box-shadow: 0px 3px 5px -1px rgba(0, 0, 0, 0.2),0px 6px 10px 0px rgba(0, 0, 0, 0.14),0px 1px 18px 0px rgba(0, 0, 0, 0.12);
}
.MuiButton-raised:active {
  box-shadow: 0px 5px 5px -3px rgba(0, 0, 0, 0.2),0px 8px 10px 1px rgba(0, 0, 0, 0.14),0px 3px 14px 2px rgba(0, 0, 0, 0.12);
}
.MuiButton-raised.MuiButton-disabled {
  color: rgba(0, 0, 0, 0.26);
  box-shadow: none;
  background-color: rgba(0, 0, 0, 0.12);
}
.MuiButton-raised:hover {
  background-color: #d5d5d5;
}
@media (hover: none) {
  .MuiButton-raised:hover {
    background-color: #e0e0e0;
  }
}
.MuiButton-raised:hover.MuiButton-disabled {
  background-color: rgba(0, 0, 0, 0.12);
}
.MuiButton-raisedPrimary {
  color: #fff;
  background-color: #3f51b5;
}
.MuiButton-raisedPrimary:hover {
  background-color: #303f9f;
}
@media (hover: none) {
  .MuiButton-raisedPrimary:hover {
    background-color: #3f51b5;
  }
}
.MuiButton-raisedSecondary {
  color: #fff;
  background-color: #f50057;
}
.MuiButton-raisedSecondary:hover {
  background-color: #c51162;
}
@media (hover: none) {
  .MuiButton-raisedSecondary:hover {
    background-color: #f50057;
  }
}
.MuiButton-fab {
  width: 56px;
  height: 56px;
  padding: 0;
  min-width: 0;
  font-size: 24px;
  box-shadow: 0px 3px 5px -1px rgba(0, 0, 0, 0.2),0px 6px 10px 0px rgba(0, 0, 0, 0.14),0px 1px 18px 0px rgba(0, 0, 0, 0.12);
  border-radius: 50%;
}
.MuiButton-fab:active {
  box-shadow: 0px 7px 8px -4px rgba(0, 0, 0, 0.2),0px 12px 17px 2px rgba(0, 0, 0, 0.14),0px 5px 22px 4px rgba(0, 0, 0, 0.12);
}
.MuiButton-mini {
  width: 40px;
  height: 40px;
}
.MuiButton-sizeSmall {
  padding: 7px 8px;
  min-width: 64px;
  font-size: 0.8125rem;
  min-height: 32px;
}
.MuiButton-sizeLarge {
  padding: 8px 24px;
  min-width: 112px;
  font-size: 0.9375rem;
  min-height: 40px;
}
.MuiButton-fullWidth {
  width: 100%;
}
.MuiTooltip-root {
  display: inline-block;
  flex-direction: inherit;
}
.MuiTooltip-popper {
  z-index: 1500;
  pointer-events: none;
}
.MuiTooltip-popper.MuiTooltip-open {
  pointer-events: auto;
}
.MuiTooltip-tooltip {
  color: #fff;
  opacity: 0;
  padding: 4px 8px;
  transform: scale(0);
  font-size: 0.625rem;
  transition: opacity 150ms cubic-bezier(0.4, 0, 1, 1) 0ms,transform 150ms cubic-bezier(0.4, 0, 1, 1) 0ms;
  min-height: 0;
  font-family: \\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif;
  line-height: 1.4em;
  border-radius: 2px;
  background-color: #616161;
}
.MuiTooltip-tooltip.MuiTooltip-open {
  opacity: 0.9;
  transform: scale(1);
  transition: opacity 150ms cubic-bezier(0.0, 0, 0.2, 1) 0ms,transform 150ms cubic-bezier(0.0, 0, 0.2, 1) 0ms;
}
.MuiTooltip-touch {
  padding: 8px 16px;
  font-size: 0.875rem;
  line-height: 1.14286em;
}
.MuiTooltip-tooltipPlacementLeft {
  margin: 0 24px;
  transform-origin: right center;
}
@media (min-width:600px) {
  .MuiTooltip-tooltipPlacementLeft {
    margin: 0 14px;
  }
}
.MuiTooltip-tooltipPlacementRight {
  margin: 0 24px;
  transform-origin: left center;
}
@media (min-width:600px) {
  .MuiTooltip-tooltipPlacementRight {
    margin: 0 14px;
  }
}
.MuiTooltip-tooltipPlacementTop {
  margin: 24px 0;
  transform-origin: center bottom;
}
@media (min-width:600px) {
  .MuiTooltip-tooltipPlacementTop {
    margin: 14px 0;
  }
}
.MuiTooltip-tooltipPlacementBottom {
  margin: 24px 0;
  transform-origin: center top;
}
@media (min-width:600px) {
  .MuiTooltip-tooltipPlacementBottom {
    margin: 14px 0;
  }
}
.fcFloatingAction-root {
  right: 16px;
  bottom: 16px;
  position: fixed;
}
.fcFloatingAction-root:not(.fcFloatingAction-opened) .fcFloatingAction-icon.fcFloatingAction-opened {
  opacity: 0;
  transform: rotate(225deg);
}
.fcFloatingAction-root.fcFloatingAction-opened .fcFloatingAction-icon:not(.fcFloatingAction-opened) {
  opacity: 0;
  transform: rotate(-225deg);
}
.fcFloatingAction-item {
  padding: 8px;
}
.fcFloatingAction-itemOpened {
  margin-left: 160px;
}
.fcFloatingAction-button {
  position: relative;
}
.fcFloatingAction-smallButton {
  width: 40px;
  height: 40px;
  composes: $button;
  margin-left: 8px;
}
.fcFloatingAction-icon {
  top: 16px;
  left: 16px;
  width: 24px;
  height: 24px;
  position: absolute;
  transition: all 200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
}
.fcFloatingAction-smallIcon {
  top: 8px;
  left: 8px;
  composes: $icon;
}
.fcFloatingAction-plusIcon {
  top: 12px;
  left: 12px;
  width: 32px;
  height: 32px;
}
.fcFloatingAction-content {
  margin: 8px;
}"
`;

exports[`snapshot: className html 1`] = `
<div
  className="test-class fcFloatingAction-root"
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
>
  <div
    className="fcFloatingAction-item"
    onClick={[Function]}
  >
    <button
      aria-describedby={undefined}
      className="MuiButtonBase-root MuiButton-root MuiButton-raised MuiButton-fab MuiButton-raisedSecondary fcFloatingAction-button"
      disabled={false}
      onBlur={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseOver={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex="0"
      type="button"
    >
      <span
        className="MuiButton-label"
      >
        <svg
          aria-hidden="true"
          className="MuiSvgIcon-root fcFloatingAction-icon fcFloatingAction-plusIcon"
          color={undefined}
          focusable="false"
          viewBox="0 0 24 24"
        >
          <g>
            <path
              d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z"
            />
          </g>
        </svg>
        <svg
          aria-hidden="true"
          className="MuiSvgIcon-root fcFloatingAction-icon fcFloatingAction-opened"
          color={undefined}
          focusable="false"
          viewBox="0 0 24 24"
        >
          <g>
            <path
              d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z"
            />
          </g>
        </svg>
      </span>
      <span
        className="MuiTouchRipple-root"
      />
    </button>
    <div
      className="MuiTooltip-popper"
      data-placement={undefined}
      data-x-out-of-boundaries={undefined}
      style={
        Object {
          "left": 0,
          "opacity": 0,
          "pointerEvents": "none",
          "position": "absolute",
          "top": 0,
        }
      }
    >
      <div
        aria-hidden={true}
        className="MuiTooltip-tooltip MuiTooltip-tooltipPlacementLeft"
        id={undefined}
        role="tooltip"
      >
        
      </div>
    </div>
  </div>
</div>
`;

exports[`snapshot: opened css 1`] = `""`;

exports[`snapshot: opened html 1`] = `
<div
  className="fcFloatingAction-root fcFloatingAction-opened"
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
>
  <div
    className="fcFloatingAction-item fcFloatingAction-itemOpened"
    onClick={[Function]}
  >
    <button
      aria-describedby={undefined}
      className="MuiButtonBase-root MuiButton-root MuiButton-raised MuiButton-fab MuiButton-raisedPrimary fcFloatingAction-smallButton"
      disabled={false}
      onBlur={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseOver={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex="0"
      type="button"
    >
      <span
        className="MuiButton-label"
      >
        <svg
          aria-hidden="true"
          className="MuiSvgIcon-root fcFloatingAction-smallIcon fcFloatingAction-opened"
          color={undefined}
          focusable="false"
          viewBox="0 0 24 24"
        >
          <g>
            <path
              d="M17.65 6.35C16.2 4.9 14.21 4 12 4c-4.42 0-7.99 3.58-7.99 8s3.57 8 7.99 8c3.73 0 6.84-2.55 7.73-6h-2.08c-.82 2.33-3.04 4-5.65 4-3.31 0-6-2.69-6-6s2.69-6 6-6c1.66 0 3.14.69 4.22 1.78L13 11h7V4l-2.35 2.35z"
            />
          </g>
        </svg>
      </span>
      <span
        className="MuiTouchRipple-root"
      />
    </button>
    <div
      className="MuiTooltip-popper MuiTooltip-open"
      data-placement={undefined}
      data-x-out-of-boundaries={undefined}
      style={
        Object {
          "left": 0,
          "opacity": 0,
          "pointerEvents": "none",
          "position": "absolute",
          "top": 0,
        }
      }
    >
      <div
        aria-hidden={false}
        className="MuiTooltip-tooltip MuiTooltip-open MuiTooltip-tooltipPlacementLeft"
        id={undefined}
        role="tooltip"
      >
        refresh
      </div>
    </div>
  </div>
  <div
    className="fcFloatingAction-item fcFloatingAction-itemOpened"
    onClick={[Function]}
  >
    <button
      aria-describedby={undefined}
      className="MuiButtonBase-root MuiButton-root MuiButton-raised MuiButton-fab MuiButton-raisedSecondary fcFloatingAction-smallButton"
      disabled={false}
      onBlur={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseOver={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex="0"
      type="button"
    >
      <span
        className="MuiButton-label"
      >
        <svg
          aria-hidden="true"
          className="MuiSvgIcon-root fcFloatingAction-smallIcon fcFloatingAction-opened"
          color={undefined}
          focusable="false"
          viewBox="0 0 24 24"
        >
          <g>
            <path
              d="M9 16.2L4.8 12l-1.4 1.4L9 19 21 7l-1.4-1.4L9 16.2z"
            />
          </g>
        </svg>
      </span>
      <span
        className="MuiTouchRipple-root"
      />
    </button>
    <div
      className="MuiTooltip-popper MuiTooltip-open"
      data-placement={undefined}
      data-x-out-of-boundaries={undefined}
      style={
        Object {
          "left": 0,
          "opacity": 0,
          "pointerEvents": "none",
          "position": "absolute",
          "top": 0,
        }
      }
    >
      <div
        aria-hidden={false}
        className="MuiTooltip-tooltip MuiTooltip-open MuiTooltip-tooltipPlacementLeft"
        id={undefined}
        role="tooltip"
      >
        done
      </div>
    </div>
  </div>
  <div
    className="fcFloatingAction-item fcFloatingAction-itemOpened"
    onClick={[Function]}
  >
    <button
      aria-describedby={undefined}
      className="MuiButtonBase-root MuiButton-root MuiButton-raised MuiButton-fab MuiButton-raisedPrimary fcFloatingAction-smallButton"
      disabled={false}
      onBlur={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseOver={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex="0"
      type="button"
    >
      <span
        className="MuiButton-label"
      >
        <svg
          aria-hidden="true"
          className="MuiSvgIcon-root fcFloatingAction-smallIcon fcFloatingAction-opened"
          color={undefined}
          focusable="false"
          viewBox="0 0 24 24"
        >
          <g>
            <path
              d="M6 19c0 1.1.9 2 2 2h8c1.1 0 2-.9 2-2V7H6v12zM19 4h-3.5l-1-1h-5l-1 1H5v2h14V4z"
            />
          </g>
        </svg>
      </span>
      <span
        className="MuiTouchRipple-root"
      />
    </button>
    <div
      className="MuiTooltip-popper MuiTooltip-open"
      data-placement={undefined}
      data-x-out-of-boundaries={undefined}
      style={
        Object {
          "left": 0,
          "opacity": 0,
          "pointerEvents": "none",
          "position": "absolute",
          "top": 0,
        }
      }
    >
      <div
        aria-hidden={false}
        className="MuiTooltip-tooltip MuiTooltip-open MuiTooltip-tooltipPlacementLeft"
        id={undefined}
        role="tooltip"
      >
        delete
      </div>
    </div>
  </div>
  <div
    className="fcFloatingAction-item fcFloatingAction-itemOpened"
    onClick={[Function]}
  >
    <button
      aria-describedby={undefined}
      className="MuiButtonBase-root MuiButton-root MuiButton-raised MuiButton-fab MuiButton-raisedSecondary fcFloatingAction-button"
      disabled={false}
      onBlur={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseOver={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex="0"
      type="button"
    >
      <span
        className="MuiButton-label"
      >
        <svg
          aria-hidden="true"
          className="MuiSvgIcon-root fcFloatingAction-icon fcFloatingAction-plusIcon"
          color={undefined}
          focusable="false"
          viewBox="0 0 24 24"
        >
          <g>
            <path
              d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z"
            />
          </g>
        </svg>
        <svg
          aria-hidden="true"
          className="MuiSvgIcon-root fcFloatingAction-icon fcFloatingAction-opened"
          color={undefined}
          focusable="false"
          viewBox="0 0 24 24"
        >
          <g>
            <path
              d="M3 17.25V21h3.75L17.81 9.94l-3.75-3.75L3 17.25zM20.71 7.04c.39-.39.39-1.02 0-1.41l-2.34-2.34c-.39-.39-1.02-.39-1.41 0l-1.83 1.83 3.75 3.75 1.83-1.83z"
            />
          </g>
        </svg>
      </span>
      <span
        className="MuiTouchRipple-root"
      />
    </button>
    <div
      className="MuiTooltip-popper MuiTooltip-open"
      data-placement={undefined}
      data-x-out-of-boundaries={undefined}
      style={
        Object {
          "left": 0,
          "opacity": 0,
          "pointerEvents": "none",
          "position": "absolute",
          "top": 0,
        }
      }
    >
      <div
        aria-hidden={false}
        className="MuiTooltip-tooltip MuiTooltip-open MuiTooltip-tooltipPlacementLeft"
        id={undefined}
        role="tooltip"
      >
        too many words
      </div>
    </div>
  </div>
</div>
`;
